# Common

./: CMakeLists.txt  package-lock.cmake
components/: name.hpp  position.hpp  radius.hpp  textureId.hpp
include/components/: acceleration.hpp  mass.hpp  name.hpp  position.hpp  radius.hpp  textureId.hpp  velocity.hpp
include/interfaces/: ILayer.hpp  IRenderEngine.hpp  IUIEngine.hpp
include/types/: RenderBuffer.hpp  RenderDataBuffer.hpp  UIState.hpp  types.hpp
include/utils/: textureId.hpp
interfaces/: IRenderEngine.hpp  IUIEngine.hpp
types/: types.hpp
utils/: assets.hpp  textureId.hpp
